[package]
name = "shopdrop"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
tokio-stream = "0.1"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
rusqlite = "0.29"
